# Crow-App

./: Cargo.toml  README.md  package-lock.json  package.json
rust/: Cargo.toml
rust/src/: admin.rs  main.rs  router.rs
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/notes/: mod.rs  note.rs  note_queries.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/layout/: footer.tsx  layout.css  navbar.tsx
src/app/lib/: lib.tsx
src/app/notes/: notelist.module.css  page.tsx
src/app/notes/editor/: page.tsx
