[package]
name = "revi-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.151", features = ["derive"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"